[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/Talk With_Doctor.gd" type="Script" id=1]
[ext_resource path="res://Assets/MadScientist-sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Reporter-sheet.png" type="Texture" id=3]
[ext_resource path="res://Shaders/RainbowShader.gdshader" type="Shader" id=4]
[ext_resource path="res://Assets/news.png" type="Texture" id=5]
[ext_resource path="res://Shaders/OutlineShader.gdshader" type="Shader" id=6]
[ext_resource path="res://Assets/mic.png" type="Texture" id=7]
[ext_resource path="res://Assets/brickwall.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 6 )
shader_param/rainbow = false
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_scale = 0.5
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="ShaderMaterial" id=14]
render_priority = 1
shader = ExtResource( 6 )
shader_param/rainbow = false
shader_param/line_color = Color( 0.172549, 0.164706, 0.164706, 1 )
shader_param/line_scale = 9.706
shader_param/frequency = 0.45
shader_param/light_offset = 1e-05
shader_param/alpha = 1.0

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 6 )
shader_param/rainbow = false
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_scale = 0.5
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "fala",
"speed": 14.0
} ]

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 6 )
shader_param/rainbow = false
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_scale = 0.5
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "fala",
"speed": 14.0
} ]

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 6 )
shader_param/rainbow = true
shader_param/line_color = Color( 0.278431, 0.203922, 0.203922, 1 )
shader_param/line_scale = 2.857
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 4 )
shader_param/strength = 1.0
shader_param/speed = 0.1
shader_param/angle = 0.0

[node name="Talk With_Doctor" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.56761
margin_top = -1.68179
margin_right = -3.56763
margin_bottom = -1.68176
mouse_filter = 1
color = Color( 0.866667, 0.835294, 0.835294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="brickwall" type="Sprite" parent="Background"]
position = Vector2( 507.342, 203.684 )
scale = Vector2( 3.23776, 1.91547 )
texture = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="Background"]
material = SubResource( 15 )
use_parent_material = true
margin_left = -7.11893
margin_top = 498.249
margin_right = 1056.88
margin_bottom = 509.249
rect_pivot_offset = Vector2( 763.826, 111.5 )
color = Color( 0.133333, 0.14902, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Background"]
material = SubResource( 14 )
position = Vector2( 396.584, 250.118 )
scale = Vector2( 1.24836, 1.38659 )
texture = ExtResource( 5 )

[node name="Doc" type="AnimatedSprite" parent="Background"]
material = SubResource( 12 )
position = Vector2( 316.24, 475.93 )
scale = Vector2( 8.56017, 8.70199 )
frames = SubResource( 5 )
animation = "fala"

[node name="Reporter" type="AnimatedSprite" parent="Background"]
material = SubResource( 13 )
position = Vector2( 588.596, 482.808 )
scale = Vector2( 8.41319, 9.03684 )
frames = SubResource( 10 )
animation = "fala"
flip_h = true

[node name="mic" type="Sprite" parent="Background"]
material = SubResource( 16 )
position = Vector2( 461.868, 530.081 )
scale = Vector2( 0.39666, 0.360279 )
texture = ExtResource( 7 )

[node name="FalaTimer" type="Timer" parent="Background"]
wait_time = 0.5
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Background/FalaTimer" to="." method="_on_FalaTimer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
